--- a/index.html
+++ b/index.html
@@ -559,6 +559,7 @@
                 $('body').css({
                     overflowY: 'hidden'
                 })
+                alert('y');
             } else {
                  $('body').css({
                     overflowY: 'scroll'
