--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                 $('body').css({
                     overflowY: 'hidden'
                 })
-                alert('y');
+//                alert('y');
             } else {
                  $('body').css({
                     overflowY: 'scroll'
