--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <label class="menu__btn" for="menu__toggle">
                 <span></span>
             </label>
+            <div class="m-menu__overlay" id="closeAll"></div>
 
             <section class="dashboard menu__box">
                 <ul class="menu">
