--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </div>
 
                         <ul class="subMenu">
-                            <li><a href="#">Bestellingen 1</a></li>
+                            <li><a href="index.html">Bestellingen 1</a></li>
                             <li><a href="#">Bestellingen 2</a></li>
                             <li><a href="#">Bestellingen 3</a></li>
                             <li><a href="#">Bestellingen 4</a></li>
