--- a/Evenementen.html
+++ b/Evenementen.html
@@ -195,7 +195,7 @@
                                 </div>
                                 <div class="inputsRow">
                                     <label>Administratiekosten</label>
-                                    <div class="prijs">
+                                    <div class="prijs admin">
                                         <p class="euro">€</p>
                                         <input type="text" placeholder="2,00">
                                     </div>
