--- a/Evenementen.html
+++ b/Evenementen.html
@@ -222,7 +222,7 @@
                                     <div class="inputsRow">
                                         <label></label>
                                         <div class="timeForm">
-                                            <input type="text" id="timePicker5" class="time">
+                                            <input type="time" class="time">
                                         </div>
                                     </div>
                                 </div>
@@ -234,7 +234,7 @@
                                     <div class="inputsRow">
                                         <label></label>
                                         <div class="timeForm">
-                                            <input type="text" id="timePicker6" class="time">
+                                            <input type="time"  class="time">
                                         </div>
                                     </div>
                                 </div>
