--- a/Evenementen.html
+++ b/Evenementen.html
@@ -248,7 +248,7 @@
                                     <div class="inputsRow">
                                         <label></label>
                                         <div class="timeForm">
-                                            <input type="text" id="timePicker7" class="time">
+                                            <input type="time" class="time">
                                         </div>
                                     </div>
                                 </div>
@@ -260,7 +260,7 @@
                                     <div class="inputsRow">
                                         <label></label>
                                         <div class="timeForm">
-                                            <input type="text" id="timePicker8" class="time">
+                                            <input type="time" id="timePicker8" class="time">
                                         </div>
                                     </div>
                                 </div>
@@ -587,7 +587,7 @@
                                         <div style="position: relative">
                                             <input type="text" class="calendar" placeholder="" data-input>
                                             <form class="timeForm">
-                                                <input type="text" id="timePicker" class="time2">
+                                                <input type="time"  class="time2">
                                             </form>
                                         </div>
                                     </div>
@@ -596,7 +596,7 @@
                                         <div>
                                             <input type="text" class="calendar" placeholder="" data-input>
                                             <form class="timeForm">
-                                                <input type="text" id="timePicker2" class="time2">
+                                                <input type="time"  class="time2">
                                             </form>
                                         </div>
                                     </div>
@@ -607,7 +607,7 @@
                                         <div>
                                             <input type="text" class="calendar" placeholder="" data-input>
                                             <form class="timeForm">
-                                                <input type="text" id="timePicker3" class="time2">
+                                                <input type="time"  class="time2">
                                             </form>
                                         </div>
                                     </div>
@@ -616,7 +616,7 @@
                                         <div>
                                             <input type="text" class="calendar" placeholder="" data-input>
                                             <form class="timeForm">
-                                                <input type="text" id="timePicker4" class="time2">
+                                                <input type="time" class="time2">
                                             </form>
                                         </div>
                                     </div>
@@ -720,7 +720,6 @@
         });
 
     </script>
-    <script src="script/timePicker.js"></script>
 
 </body>
 
